--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,10 @@ anyio==4.7.0
     #   openai
 attrs==24.3.0
     # via aiohttp
+azure-ai-inference==1.0.0b6
+    # via -r requirements.in
+azure-core==1.32.0
+    # via azure-ai-inference
 boto3==1.34.145
     # via
     #   -r requirements.in
@@ -71,6 +75,8 @@ idna==3.10
     #   httpx
     #   requests
     #   yarl
+isodate==0.7.2
+    # via azure-ai-inference
 jinja2==3.1.5
     # via torch
 jmespath==1.0.1
@@ -180,6 +186,7 @@ regex==2024.11.6
     # via transformers
 requests==2.32.3
     # via
+    #   azure-core
     #   huggingface-hub
     #   langchain
     #   langchain-community
@@ -201,7 +208,9 @@ scipy==1.14.1
 sentence-transformers==3.3.1
     # via -r requirements.in
 six==1.17.0
-    # via python-dateutil
+    # via
+    #   azure-core
+    #   python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
@@ -234,6 +243,8 @@ transformers==4.47.1
 typing-extensions==4.12.2
     # via
     #   anyio
+    #   azure-ai-inference
+    #   azure-core
     #   huggingface-hub
     #   openai
     #   pydantic
