--- a/requirements.txt
+++ b/requirements.txt
@@ -24,14 +24,6 @@ azure-ai-inference==1.0.0b6
     # via -r requirements.in
 azure-core==1.32.0
     # via azure-ai-inference
-boto3==1.34.145
-    # via
-    #   -r requirements.in
-    #   langchain-aws
-botocore==1.34.162
-    # via
-    #   boto3
-    #   s3transfer
 certifi==2024.12.14
     # via
     #   httpcore
@@ -79,10 +71,6 @@ isodate==0.7.2
     # via azure-ai-inference
 jinja2==3.1.5
     # via torch
-jmespath==1.0.1
-    # via
-    #   boto3
-    #   botocore
 joblib==1.4.2
     # via scikit-learn
 jsonpatch==1.33
@@ -93,22 +81,16 @@ langchain==0.2.9
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-aws==0.1.11
-    # via -r requirements.in
 langchain-community==0.2.7
     # via -r requirements.in
 langchain-core==0.2.21
     # via
     #   -r requirements.in
     #   langchain
-    #   langchain-aws
     #   langchain-community
     #   langchain-text-splitters
-    #   langgraph
 langchain-text-splitters==0.2.2
     # via langchain
-langgraph==0.1.9
-    # via -r requirements.in
 langsmith==0.1.147
     # via
     #   langchain
@@ -135,7 +117,6 @@ networkx==3.4.2
 numpy==1.26.4
     # via
     #   langchain
-    #   langchain-aws
     #   langchain-community
     #   pandas
     #   scikit-learn
@@ -168,9 +149,7 @@ pydantic==2.10.4
 pydantic-core==2.27.2
     # via pydantic
 python-dateutil==2.9.0.post0
-    # via
-    #   botocore
-    #   pandas
+    # via pandas
 pytz==2024.2
     # via
     #   neo4j
@@ -195,8 +174,6 @@ requests==2.32.3
     #   transformers
 requests-toolbelt==1.0.0
     # via langsmith
-s3transfer==0.10.4
-    # via boto3
 safetensors==0.4.5
     # via transformers
 scikit-learn==1.6.0
@@ -257,9 +234,7 @@ typing-inspect==0.9.0
 tzdata==2024.2
     # via pandas
 urllib3==2.3.0
-    # via
-    #   botocore
-    #   requests
+    # via requests
 yarl==1.18.3
     # via aiohttp
 
